--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,27 @@
 {
-	"name": "nterms/yii2-mailqueue",
-	"description": "Email queue component for yii2 that works with yii2-swiftmailer.",
+	"name": "atsys/yii2-mailqueue",
+	"description": "Email queue component for yii2. Created by Saranga Abeykoon, updated by ATSYS",
 	"keywords": ["yii2", "extension", "component", "email", "queue", "swiftmailer", "yii2-swiftmailer"],
-	"homepage": "https://github.com/nterms/yii2-mailqueue",
+	"homepage": "https://github.com/atsyscorp/yii2-mailqueue",
 	"type": "yii2-extension",
 	"license": "MIT",
 	"authors": [
 		{
-			"name": "Saranga Abeykoon",
-			"email": "amisaranga@gmail.com",
-			"homepage": "http://nterms.com/"
+			"name": "ATSYS",
+			"email": "arkitechsystems@gmail.com",
+			"homepage": "https://atsys.co/"
 		}
 	],
 	"require": {
 		"yiisoft/yii2": "*",
-		"yiisoft/yii2-swiftmailer": "~2.1.0"
+		"yiisoft/yii2-symfonymailer": "~2.1.0"
 	},
 	"autoload": {
 		"psr-4": {
-			"nterms\\mailqueue\\": ""
+			"atsys\\mailqueue\\": ""
 		}
 	},
         "extra": {
-            "bootstrap": "nterms\\mailqueue\\Bootstrap"            
+            "bootstrap": "atsys\\mailqueue\\Bootstrap"            
         }
 }
