--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
 		"yiisoft/yii2": "*",
 		"yiisoft/yii2-symfonymailer": "~3.0.0"
 	},
+	"require-dev": {
+        "phpunit/phpunit": "^9.0"
+    },
 	"autoload": {
 		"psr-4": {
 			"atsyscorp\\mailqueue\\": ""
