--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 	],
 	"require": {
 		"yiisoft/yii2": "*",
-		"yiisoft/yii2-symfonymailer": ">2.0.0"
+		"yiisoft/yii2-symfonymailer": "~3.0.0"
 	},
 	"require-dev": {
         "phpunit/phpunit": "^9.0"
