--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"keywords": ["yii2", "extension", "component", "email", "queue", "symfonymailer", "yii2-symfonymailer"],
 	"homepage": "https://github.com/atsyscorpcorp/yii2-mailqueue",
 	"type": "yii2-extension",
-	"version": "1.0.6-beta",
+	"version": "1.0.7",
 	"license": "MIT",
 	"authors": [
 		{
